change json path syntax